miniextendr-macros/tests/ui/derive_dataframe_field_as_list_expand_conflict.rs
//! Test: as_list and expand are mutually exclusive.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
struct Foo {
    #[dataframe(as_list, expand)]
    coords: [f64; 3],
}

fn main() {}
